refactor: Update dependencies and remove unused code
Removes the `COLOR_MAP` and `standardizeValue` functions from `geminiService.ts` as they are no longer used.
Updates the `pdfjs-dist` dependency version in `index.html`.
Adds a health check endpoint to the server.
Introduces API status tracking in `App.tsx`.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     "xlsx": "https://esm.sh/xlsx@^0.18.5",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.530",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@5.4.530",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "express": "https://esm.sh/express@^5.2.1",
